--- a/style.css
+++ b/style.css
@@ -1,3 +1,9 @@
+body{
+    background-color: rgb(255, 253, 253);
+}
+#body{
+    background-color: rgb(255, 253, 253);
+}
 
 #id1,#id2,#id3,#id4,#id5,#id6,#id7,#id8{
 
